# gRPCexample

./: CMakeLists.txt  README.md
Cmake_example/: CMakeLists.txt  README.md
Cmake_example/cmake/: common.cmake
Makefile_example/: Makefile  README.md
cmake/: FindProtobufWithTargets.cmake
protos/: CMakeLists.txt  gRPCexample.proto
services/: CMakeLists.txt
services/chat/: CMakeLists.txt  README.md
services/chat/lib/: CMakeLists.txt
services/chat/lib/include/: chat.h
services/chat/lib/src/: chat.cpp
services/chat/src/: CMakeLists.txt  chat_service.cpp
systemd/: CMakeLists.txt  gRPCexample.service.in
